re PR c++/28523 (Throw of a derived class casted to its base class using a C-style cast)

PR c++/28523
	* tree.c (stabilize_expr): Tweak documentation.  Add assertion.
	(stabilize_call): Tweak documentation.
	(stabilize_init): Only call stabilize_call for calls.
	PR c++/28523
	* g++.dg/eh/cast1.C: New test.

From-SVN: r115863